@@ -21,7 +21,7 @@
 
 
 
-static char  software_version[]   = "$Id: t0009.c,v 1.1 2001/10/12 23:29:11 brianb Exp $";
+static char  software_version[]   = "$Id: t0009.c,v 1.2 2001/11/29 23:28:37 brianb Exp $";
 static void *no_unused_var_warn[] = {software_version,
                                      no_unused_var_warn};
 
@@ -96,7 +96,7 @@ fprintf(stdout, "About to open\n");
    
    fprintf(stdout, "creating table\n");
    dbcmd(dbproc,
-         "create table dblib0009 (i int not null, s varchar(10) not null)");
+         "create table dblib0009 (i int not null, s char(10) not null)");
    dbsqlexec(dbproc);
    while (dbresults(dbproc)!=NO_MORE_RESULTS)
    {
